--- a/index.html
+++ b/index.html
@@ -3,189 +3,210 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
+    <title>Web studio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital@0;1&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
-
-    <title>Document</title>
   </head>
   <body>
     <!-- #region header -->
-    <header>
-      <nav>
-        <a class="logo-main" href="./index.html"
-          >Web<span class="studio">Studio</span></a
-        >
-        <ul>
-          <li class="nav-link">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-link"><a class="nav-link" href="">Portfolio</a></li>
-          <li class="nav-link"><a class="nav-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="adresss">
-        <ul>
-          <li class="adress">
-            <a class="adress-a" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="adress">
-            <a class="adress-a" href="tel:+110001111111">
-              +11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="container">
+        <nav class="page-nav">
+          <a href="./index.html" class="main-logo"
+            >Web<span class="accent-black">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="" class="nav-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="main-contacts">
+          <ul class="contacts-list">
+            <li class="contacts-link">
+              <a href="mailto:info@devstudio.com" class="adress"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-link">
+              <a href="tel:+110001111111" class="adress">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
-    <!-- endregion header -->
+    <!-- #endregion header -->
+
     <main>
-      <!-- #region effective sol -->
-      <section class="effective-sol">
-        <h1 class="title-first">Effective Solutions for Your Business</h1>
-        <button class="but-services" type="button">Order Service</button>
+      <!-- #region solutions -->
+      <section class="main-section">
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="main-button">Order Service</button>
+        </div>
       </section>
 
-      <!-- endregion effective sol -->
-
-      <!-- #region about us -->
-
-      <section class="about">
-        <h2 class="title">/</h2>
-        <ul>
-          <li>
-            <h3 class="title-third">Strategy</h3>
-            <p class="parag">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-third">Punctuality</h3>
-            <p class="parag">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-third">Diligence</h3>
-            <p class="parag">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-third">Technologies</h3>
-            <p class="parag">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="feature">
+        <div class="container">
+          <h2 class="visually-hidden">Title</h2>
+          <ul class="feature-list">
+            <li class="feature-item">
+              <h3 class="subsubtitle-feature">Strategy</h3>
+              <p class="feature-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="subsubtitle-feature">Punctuality</h3>
+              <p class="feature-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="subsubtitle-feature">Diligence</h3>
+              <p class="feature-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="subsubtitle-feature">Technologies</h3>
+              <p class="feature-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
+      <!-- #endregion solutions -->
 
-      <!-- endregion about us -->
+      <!-- #region team -->
+      <section class="team">
+        <div class="container">
+          <h2 class="subtitle">Our Team</h2>
+          <ul class="team-card">
+            <li class="team-card-list">
+              <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
+              <div class="card">
+                <h3 class="subsubtitle-team">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
 
-      <!-- #region our team -->
+            <li class="team-card-list">
+              <img src="./images/img1.jpg" alt="Tom Ford" width="264" />
+              <div class="card">
+                <h3 class="subsubtitle-team">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
 
-      <section class="our-team">
-        <h2 class="title">Our Team</h2>
-        <ul>
-          <li class="our-li">
-            <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="title-third">Mark Guerrero</h3>
-            <p class="parag">Product Designer</p>
-          </li>
-          <li class="our-li">
-            <img src="./images/img1.jpg" alt="Tom Ford" width="264" />
-            <h3 class="title-third">Tom Ford</h3>
-            <p class="parag">Frontend Developer</p>
-          </li>
-          <li class="our-li">
-            <img src="./images/img2.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="title-third">Camila Garcia</h3>
-            <p class="parag">Marketing</p>
-          </li>
-          <li class="our-li">
-            <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="title-third">Daniel Wilson</h3>
-            <p class="parag">UI Designer</p>
-          </li>
-        </ul>
+            <li class="team-card-list">
+              <img src="./images/img2.jpg" alt="Camila Garcia" width="264" />
+              <div class="card">
+                <h3 class="subsubtitle-team">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card-list">
+              <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" />
+              <div class="card">
+                <h3 class="subsubtitle-team">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-
-      <!-- endregion our team -->
+      <!-- #endregion team -->
 
       <!-- #region portfolio -->
-
-      <section class="our-port">
-        <h2 class="title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/our1.jpg" alt="Banking Alt" width="360" />
-            <h3 class="title-third">Banking App</h3>
-            <p class="parag">App</p>
-          </li>
-          <li>
-            <img src="./images/our2.jpg" alt="Cashless Payment" width="360" />
-            <h3 class="title-third">Cashless Payment</h3>
-            <p class="parag">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/our3.jpg" alt="Meditation App" width="360" />
-            <h3 class="title-third">Meditation App</h3>
-            <p class="parag">App</p>
-          </li>
-          <li>
-            <img src="./images/our4.jpg" alt="Taxi Service" width="360" />
-            <h3 class="title-third">Taxi Service</h3>
-            <p class="parag">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/our5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="title-third">Screen Illustrations</h3>
-            <p class="parag">Design</p>
-          </li>
-          <li>
-            <img src="./images/our6.jpg" alt="Online Courses" width="360" />
-            <h3 class="title-third">Online Courses</h3>
-            <p class="parag">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="subtitle">Our Portfolio</h2>
+          <ul class="project-card">
+            <li class="project-card-list">
+              <img src="./images/our1.jpg" alt="banking app" width="360" />
+              <div class="app">
+                <h3 class="subsubtitle-portfolio">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="project-card-list">
+              <img src="./images/our2.jpg" alt="cashless payment" width="360" />
+              <div class="app">
+                <h3 class="subsubtitle-portfolio">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="project-card-list">
+              <img src="./images/our3.jpg" alt="meditation app" width="360" />
+              <div class="app">
+                <h3 class="subsubtitle-portfolio">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="project-card-list">
+              <img src="./images/our4.jpg" alt="taxi service" width="360" />
+              <div class="app">
+                <h3 class="subsubtitle-portfolio">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="project-card-list">
+              <img
+                src="./images/our5.jpg"
+                alt="screen illustrations"
+                width="360"
+              />
+              <div class="app">
+                <h3 class="subsubtitle-portfolio">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="project-card-list">
+              <img src="./images/our6.jpg" alt="online courses" width="360" />
+              <div class="app">
+                <h3 class="subsubtitle-portfolio">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-
-      <!-- endregion portfolio -->
+      <!-- #endregion portfolio -->
     </main>
 
     <!-- #region footer -->
-
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"
-        >Web<span class="studio-sec">Studio</span></a
-      >
-      <p class="foot-p">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo"
+          >Web<span class="accent-white">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
-
-    <!-- endregion footer -->
+    <!-- #endregion footer -->
   </body>
 </html>
